@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+         android:orientation="vertical"
+         android:layout_width="fill_parent" 
+         android:layout_height="fill_parent">        
+   <ListView android:id="@id/android:list"
+             android:layout_width="fill_parent" 
+             android:layout_height="fill_parent"
+             android:layout_weight="1"
+             android:drawSelectorOnTop="false"/>     
+</LinearLayout>
