@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:gravity="center_vertical">
+	<TextView
+	    android:id="@+id/name"
+	    android:text="name"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:textAppearance="?android:attr/textAppearanceLarge"
+	    android:paddingLeft="5dip"
+	    android:singleLine="true" />
+	<TextView
+	    android:id="@+id/detail"
+	    android:text="detail"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content"
+	    android:paddingLeft="5dip" 
+	    />
+</LinearLayout>
